--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   },
   "dependencies": {
     "css-loader": "^7.1.2",
-    "dayjs": "1.11.7",
+    "dayjs": "^1.11.7",
+    "flatpickr": "^4.6.13",
+    "nanoid": "^5.1.5",
     "style-loader": "^4.0.0"
   },
   "browserslist": [
